monitoria/mac323/4-2-35/grades/Nicolas-Nogueira-Lopes-da-Silva_191485_assignsubmission_file_NICOLAS9277541.txt

COMPILATION ERROR

CORREÇÃO AUTOMÁTICA
Quantidade de Testes | Veredito
0 | OK
0 | Tempo de Execução Excedido
0 | Resposta Errada
0 | Erro de Execução

make: '/home/bcc/victorsenam/private/usp/monitoria/mac323/4-2-35/tester/checker/checker' is up to date.
CoreVertices.java:28: error: no suitable constructor found for Digraph(In)
        Digraph G = new Digraph(in);
                    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
CoreVertices.java:43: error: reference to Queue is ambiguous
                Queue<Integer> queue = new Queue<Integer>();
                ^
  both class edu.princeton.cs.algs4.Queue in edu.princeton.cs.algs4 and interface java.util.Queue in java.util match
CoreVertices.java:43: error: reference to Queue is ambiguous
                Queue<Integer> queue = new Queue<Integer>();
                                           ^
  both class edu.princeton.cs.algs4.Queue in edu.princeton.cs.algs4 and interface java.util.Queue in java.util match
3 errors
=========== TENTANDO COMPILAR DE NOVO (imports no começo do código) ==============
CoreVertices.java:29: error: no suitable constructor found for Digraph(In)
        Digraph G = new Digraph(in);
                    ^
    constructor Digraph.Digraph(int) is not applicable
      (argument mismatch; In cannot be converted to int)
    constructor Digraph.Digraph(edu.princeton.cs.algs4.In) is not applicable
      (argument mismatch; In cannot be converted to edu.princeton.cs.algs4.In)
    constructor Digraph.Digraph(Digraph) is not applicable
      (argument mismatch; In cannot be converted to Digraph)
CoreVertices.java:44: error: reference to Queue is ambiguous
                Queue<Integer> queue = new Queue<Integer>();
                ^
  both class edu.princeton.cs.algs4.Queue in edu.princeton.cs.algs4 and interface java.util.Queue in java.util match
CoreVertices.java:44: error: reference to Queue is ambiguous
                Queue<Integer> queue = new Queue<Integer>();
                                           ^
  both class edu.princeton.cs.algs4.Queue in edu.princeton.cs.algs4 and interface java.util.Queue in java.util match
3 errors
